--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,5 +44,12 @@
         android:text="Acceder"
         android:onClick="login"/>
 
+    <Button
+        android:id="@+id/butonregistrar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Registrar"
+        android:onClick="register"/>
+
 
 </LinearLayout>
